@@ -52,6 +52,7 @@
 	- {Free,Open}BSD find-{provides,requires} (suzukis@file.phys.tohoku.ac.jp).
 	- new rpm-build package to isolate rpm dependencies on perl/bash2.
 	- always remove duplicate identical package entries on --rebuilddb.
+	- add scripts for autogenerating CPAN dependencies.
 
 3.0.2 -> 3.0.3
 	- add --eval to find result of macro expansion.
